--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "7.1.5",
     "@mantine/hooks": "7.1.5",
     "@mantine/vanilla-extract": "7.1.5",
+    "@tabler/icons-react": "^2.40.0",
     "@vanilla-extract/css": "1.13.0",
     "@vanilla-extract/dynamic": "2.0.3",
     "@vanilla-extract/recipes": "0.5.0",
@@ -26,6 +27,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "20.8.10",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "6.9.0",
